# BonkBot

./: .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json  requirements-dev.txt  ruff.toml
bonkbot/: __init__.py
bonkbot/core/: __init__.py  api.py  bonkbot.py  bot_data.py  bot_event_handler.py  constants.py  player.py  room.py  timesyncer.py
bonkbot/core/api/: __init__.py  bonk_api.py  endpoints.py  socket_events.py
bonkbot/core/bot/: __init__.py  bonk_api.py  bot.py  bot_data.py  bot_event_handler.py  bot_events.py
bonkbot/core/room/: __init__.py  player.py  room.py  timesyncer.py
bonkbot/pson/: __init__.py  bytebuffer.py  staticpair.py  t.py  type.py  utils.py
bonkbot/types/: __init__.py  friend.py  gamo.py  input.py  input_flag.py  inputs.py  mode.py  player_move.py  room_data.py  room_info.py  server.py  server_info.py  settings.py  team.py
bonkbot/types/avatar/: __init__.py  avatar.py  layer.py
bonkbot/types/errors/: __init__.py  api_error.py  bot_already_logged_error.py  bot_not_logged_error.py  error_type.py  login_error.py  not_logged_error.py  room_already_connected.py  room_not_connected.py
bonkbot/types/map/: __init__.py  body.py  body_shape.py  bonkmap.py  cap_zone.py  capture_type.py  capture_zone.py  force_zone_properties.py  force_zone_type.py  joint_properties.py  map.py  map_metadata.py  map_physics.py  map_properties.py  shape_body_type.py  shape_type.py  spawn.py
bonkbot/types/map/physics/: __init__.py  collide.py  fixture.py  map_physics.py
bonkbot/types/map/physics/body/: __init__.py  body.py  body_force.py  body_shape.py  body_type.py  force_zone.py
bonkbot/types/map/physics/joint/: __init__.py  distance_joint.py  gear_joint.py  joint.py  joint_properties.py  joint_type.py  lpj_joint.py  lsj_joint.py  revolute_joint.py
bonkbot/types/map/physics/shape/: __init__.py  box_shape.py  circle_shape.py  polygon_shape.py  shape.py
bonkbot/types/room/: __init__.py  game_settings.py  initial_state.py  room_action.py  room_create_params.py  room_data.py  room_info.py  room_join_params.py
bonkbot/utils/: __init__.py  api.py  validation.py  xp.py
examples/: mirror_bot.py  oop_rooms_watcher.py  rooms_watcher.py  xp_farm.py
